# SimplePhn

./: .gitignore  .gitmodules  README.md  config.yaml  echowing-simplephn.service  main.py  pyproject.toml  simplephn.service
common/: __init__.py  config.py  consul.py  pulsar.py
config/: sms.yaml
proto/: sms.proto
service/: __init__.py  sms.py
src/common/: __init__.py  config.py  consul.py  modem_manager.py  serial_detector.py  serial_manager.py
src/sms/: __init__.py  sender.py  server.py  service.py  sms_pb2.py  sms_pb2_grpc.py
src/sms_service/: consul_client.py  server.py  sms_pb2.py  sms_pb2_grpc.py  sms_sender.py
tests/: client.py  test_modem.py
